<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/LengthLayout"



    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:padding="7dp"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:fontFamily="sans-serif-condensed"

                android:textColor="@color/black"
                android:textSize="20sp"/>

            <AutoCompleteTextView
                android:id="@+id/edtFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="5"
                android:ems="8"
                android:hint="@string/m"
                android:fontFamily="sans-serif-condensed"
                android:inputType="text"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:fontFamily="sans-serif-condensed"

                android:textColor="@color/black"
                android:textSize="20sp"
                />

            <AutoCompleteTextView
                android:id="@+id/edtTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="1"
                android:ems="8"
                android:hint="@string/cm"
                android:fontFamily="sans-serif-condensed"
                android:inputType="text"
                android:minHeight="48dp" />
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_number"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="15dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"


        />

    <EditText
        android:id="@+id/edtInputNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints="5"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck"
        android:layout_marginTop="5dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Convert"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:backgroundTint="#FFEB3B"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/btnCalculate"/>

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
       android:text="@string/output"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"/>











</LinearLayout>