<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#ffff">





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/unit_converter"
        android:textColor=" #581845"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginStart="17dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="130dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/crdLength"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="#CCCCFF"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length"
                android:textColor="#090909"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:layout_gravity="center"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdMass"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="50dp"
            android:backgroundTint="#CCCCFF"
            app:cardCornerRadius="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mass"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/crdTime"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="#CCCCFF"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdVolume"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="50dp"
            android:backgroundTint="#CCCCFF"
            app:cardCornerRadius="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Volume"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  Developed.. \n        By \n Tejas Pandule"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:textColor="@color/black"/>











</LinearLayout>